--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nurgul",
   "version": "0.1.0",
-  "homepage": "https://zakur01.github.io/husk",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -35,7 +34,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
